style(asset): apply quality-gate OpenRewrite normalization
Apply the idempotent OpenRewrite/format normalizations the pre-commit quality
gate produced over the asset package (null-safe equalsIgnoreCase ordering and
import formatting). Behaviour is unchanged; the full pre-commit gate is green.

Co-Authored-By: Claude <noreply@anthropic.com>